@@ -2,23 +2,36 @@ package at.ac.tuwien.sepr.groupphase.backend.service.impl;
 
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.PurchaseCreateDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.PurchaseDetailDto;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.PurchaseOverviewDto;
+import at.ac.tuwien.sepr.groupphase.backend.entity.CancelPurchase;
 import at.ac.tuwien.sepr.groupphase.backend.entity.Merchandise;
 import at.ac.tuwien.sepr.groupphase.backend.entity.Purchase;
 import at.ac.tuwien.sepr.groupphase.backend.entity.Ticket;
 import at.ac.tuwien.sepr.groupphase.backend.exception.ValidationException;
 import at.ac.tuwien.sepr.groupphase.backend.repository.MerchandiseRepository;
+import at.ac.tuwien.sepr.groupphase.backend.repository.PerformanceRepository;
+import at.ac.tuwien.sepr.groupphase.backend.repository.PurchaseCancelRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.PurchaseRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.TicketRepository;
 import at.ac.tuwien.sepr.groupphase.backend.security.RandomStringGenerator;
 import at.ac.tuwien.sepr.groupphase.backend.service.PurchaseService;
 import at.ac.tuwien.sepr.groupphase.backend.service.TicketService;
-import java.util.ArrayList;
+import at.ac.tuwien.sepr.groupphase.backend.repository.ArtistRepository;
+import at.ac.tuwien.sepr.groupphase.backend.repository.LocationRepository;
+import at.ac.tuwien.sepr.groupphase.backend.entity.Performance;
+import at.ac.tuwien.sepr.groupphase.backend.entity.Artist;
+import at.ac.tuwien.sepr.groupphase.backend.entity.Location;
+
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.lang.invoke.MethodHandles;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -32,15 +45,25 @@ public class PurchaseServiceImpl implements PurchaseService {
     private final MerchandiseRepository merchandiseRepository;
     private final RandomStringGenerator generator;
     private final TicketService ticketService;
+    private final PerformanceRepository performanceRepository;
+    private final ArtistRepository artistRepository;
+    private final LocationRepository locationRepository;
+    private final PurchaseCancelRepository purchaseCancelRepository;
 
     public PurchaseServiceImpl(PurchaseRepository purchaseRepository,
         TicketRepository ticketRepository, MerchandiseRepository merchandiseRepository,
-        RandomStringGenerator generator, TicketService ticketService) {
+        RandomStringGenerator generator, TicketService ticketService,
+        PerformanceRepository performanceRepository, ArtistRepository artistRepository,
+        LocationRepository locationRepository, PurchaseCancelRepository purchaseCancelRepository) {
         this.purchaseRepository = purchaseRepository;
         this.ticketRepository = ticketRepository;
         this.merchandiseRepository = merchandiseRepository;
         this.generator = generator;
         this.ticketService = ticketService;
+        this.performanceRepository = performanceRepository;
+        this.artistRepository = artistRepository;
+        this.locationRepository = locationRepository;
+        this.purchaseCancelRepository = purchaseCancelRepository;
     }
 
     @Override
@@ -119,18 +142,15 @@ public class PurchaseServiceImpl implements PurchaseService {
     public PurchaseDetailDto getPurchaseById(Long id) {
         logger.info("Fetching purchase with ID: {}", id);
 
-        // Lade das Purchase-Objekt
         Purchase purchase = purchaseRepository.findById(id)
             .orElseThrow(() -> new IllegalArgumentException("Purchase not found"));
 
         logger.debug("Fetched purchase: {}", purchase);
 
-        // Lade die Tickets und Merchandise-Objekte basierend auf den IDs
         List<Ticket> tickets = ticketRepository.findAllById(purchase.getTicketIds());
         List<Merchandise> merchandise = merchandiseRepository.findAllById(
             purchase.getMerchandiseIds());
 
-        // Erstelle und gebe ein PurchaseDetailDto zurück
         return new PurchaseDetailDto(
             purchase.getPurchaseId(),
             purchase.getUserId(),
@@ -158,41 +178,116 @@ public class PurchaseServiceImpl implements PurchaseService {
 
     @Override
     public void updatePurchase(PurchaseDetailDto purchaseDetailDto) {
+        logger.info("Updating purchase: {}", purchaseDetailDto);
         Purchase existingPurchase = purchaseRepository.findById(purchaseDetailDto.getPurchaseId())
             .orElseThrow(() -> new IllegalArgumentException("Purchase not found"));
-        List<Long> ticketIds = new java.util.ArrayList<>(List.of()); // the tickets after cancel
-        List<Long> oldTickets = existingPurchase.getTicketIds(); //the tickets before cancel
+
+        // Ensure alreadyCancelledTickets is modifiable
+        List<Long> alreadyCancelledTickets = new ArrayList<>();
+        if (purchaseCancelRepository.existsByPurchaseId(purchaseDetailDto.getPurchaseId())) {
+            CancelPurchase existingCancellation = purchaseCancelRepository.findById(
+                    purchaseDetailDto.getPurchaseId())
+                .orElseThrow(() -> new IllegalArgumentException("Purchase not found"));
+            alreadyCancelledTickets = new ArrayList<>(existingCancellation.getTicketIds());
+        }
+
+        List<Long> ticketIds = new ArrayList<>();
+        List<Long> oldTickets = existingPurchase.getTicketIds(); // the tickets before cancel
         List<Ticket> tickets = purchaseDetailDto.getTickets();
 
         for (Ticket ticket : tickets) {
             ticketIds.add(ticket.getTicketId());
         }
 
+        if (ticketIds.isEmpty()) {
+            alreadyCancelledTickets.addAll(existingPurchase.getTicketIds());
+        }
+
         List<Long> cancelledTickets = new ArrayList<>();
 
         for (int i = 0; i < oldTickets.size(); i++) {
-            for (int j = i + 1; j < ticketIds.size(); j++) {
-                if (!ticketIds.contains(oldTickets.get(i))) {
-                    cancelledTickets.add(oldTickets.get(i));
-                    this.ticketService.updateTicketStatusList(cancelledTickets, "AVAILABLE");
-                }
+            if (!ticketIds.contains(oldTickets.get(i))) {
+                cancelledTickets.add(oldTickets.get(i));
+                alreadyCancelledTickets.add(oldTickets.get(i));
+                this.ticketService.updateTicketStatusList(cancelledTickets, "AVAILABLE");
             }
         }
 
-        existingPurchase.setTicketIds(ticketIds);
-        existingPurchase.setTotalPrice(purchaseDetailDto.getTotalPrice());
-        purchaseRepository.save(existingPurchase);
-        logger.info("Updated purchase: {}", existingPurchase);
+        double cancelledTotalPrice = 0;
+        for (Long cancelTicket : alreadyCancelledTickets) {
+            double price = this.ticketService.getTicketById(cancelTicket).getPrice().floatValue();
+            cancelledTotalPrice += price;
+        }
+
+        CancelPurchase cancelPurchase = new CancelPurchase(
+            purchaseDetailDto.getPurchaseId(),
+            existingPurchase.getUserId(),
+            alreadyCancelledTickets,
+            existingPurchase.getMerchandiseIds(),
+            existingPurchase.getMerchandiseQuantities(),
+            cancelledTotalPrice,
+            existingPurchase.getPurchaseDate(),
+            existingPurchase.getStreet(),
+            existingPurchase.getPostalCode(),
+            existingPurchase.getCity()
+        );
 
         if (ticketIds.isEmpty()) {
-            cancelledTickets.add(oldTickets.getFirst());
+            cancelledTickets.add(oldTickets.get(0)); // Change to use `get(0)` for first element
             this.ticketService.updateTicketStatusList(cancelledTickets, "AVAILABLE");
             purchaseRepository.deleteById(existingPurchase.getPurchaseId());
         } else {
+            logger.info("Updated purchase: {}", existingPurchase);
             existingPurchase.setTicketIds(ticketIds);
             existingPurchase.setTotalPrice(purchaseDetailDto.getTotalPrice());
             purchaseRepository.save(existingPurchase);
         }
+
+        logger.info("Saving cancelled purchase: {}", cancelPurchase);
+        purchaseCancelRepository.save(cancelPurchase);
     }
 
+    @Override
+    public List<PurchaseOverviewDto> getPurchaseDetailsByUser(Long userId) {
+        List<Purchase> purchases = purchaseRepository.findByUserId(userId);
+
+        return purchases.stream().map(purchase -> {
+            List<Ticket> tickets = ticketRepository.findAllById(purchase.getTicketIds());
+            List<Merchandise> merchandises = merchandiseRepository.findAllById(
+                purchase.getMerchandiseIds());
+
+            Map<Long, Map<String, String>> performanceDetails = new HashMap<>();
+            for (Ticket ticket : tickets) {
+                Long performanceId = ticket.getPerformanceId();
+                if (!performanceDetails.containsKey(performanceId)) {
+                    Performance performance = performanceRepository.findById(performanceId)
+                        .orElseThrow(() -> new IllegalArgumentException("Performance not found"));
+                    Artist artist = artistRepository.findById(performance.getArtistId())
+                        .orElseThrow(() -> new IllegalArgumentException("Artist not found"));
+                    Location location = locationRepository.findById(performance.getLocationId())
+                        .orElseThrow(() -> new IllegalArgumentException("Location not found"));
+
+                    Map<String, String> details = new HashMap<>();
+                    details.put("name", performance.getName());
+                    details.put("artistName", artist.getArtistName());
+                    details.put("locationName", location.getName());
+
+                    performanceDetails.put(performanceId, details);
+                }
+            }
+
+            return new PurchaseOverviewDto(
+                purchase.getPurchaseId(),
+                purchase.getUserId(),
+                tickets,
+                merchandises,
+                purchase.getTotalPrice(),
+                purchase.getPurchaseDate(),
+                purchase.getStreet(),
+                purchase.getPostalCode(),
+                purchase.getCity(),
+                performanceDetails
+            );
+        }).collect(Collectors.toList());
+    }
 }
